 - [DS-260] Template item some times has owningCollection filled and some times not

(Tim Donohue)
 - [DS-218] Cannot add/remove email subscriptions from Profile page in XMLUI
 - [DS-238] Move item function in xmlui
 - [DS-281] Invalid Link to "Go to DSpace Home" on Page Not Found (XMLUI)

(Tim Donohue / Andrea Bollini)
 - [DS-228] Community Admin XMLUI: Delegated Admins Patch

(Ben Bosman)
 - [DS-307] Offer access in AbstractSearch to QueryResults for subclasses
 - [DS-306] Option to disable mailserver
 - [DS-226] confirmation page of edit profile has an invalid link

(OhioLINK)
 - [DS-225] dc.description.provenance - public display

(Yin Yin Latt / Stuart Lewis)
 - [DS-205] Creative Commons - option to set legal jurisdiction

(Fabio Kepler / Steve Williams)
 - [DS-258] Item View Thumbnails not displaying in XMLUI

(Van Ly)
 - [DS-291] README update for top level of dspace 1.6.0 package directory

(Graham Triggs)
 - [DS-299] Allow long values to be specified for the max upload request (> 2GB uploads)

(Mark Wood)
 - [DS-52] Factor out common webapp installation - ID: 2042160

1.5.2 final
===========

(Graham Triggs)
 - Fixes for critical bugs identified by Findbugs

(Mark Diggory)
 - [DS-100] XMLUI OpenURL support contributed by the National Evolutionary Synthesis Center (NESCent) and @mire.
 - [DS-93]  Upgrade XMLUI to Cocoon 2.2
 - [DS-117] File uploads >=100KB lead to an error in the xmlui
 - [DS-154] Make a backup of the config dir on Ant update
 - [DS-155] Maven war plugin changes cause war to include libraries as well
 - [DS-183] XPDF support for filtering PDFs for text extraction/search authored by Larry Stone
 - [DS-185] bin files in DOS format
 
(Mark Wood)
 - [DS-2] [2002866] Return 404, not 200, when page Not Found
 - [DS-150] [2025998] Usage event (statistics) plugin hook
 - [DS-143] [2620307] 'ant init_configs' copies wrong dspace.cfg
 - [DS-41] Small JSP cleanups

(Mark Wood / Andrea Bollini)